--- a/app/views/users/position/_edit.html.erb
+++ b/app/views/users/position/_edit.html.erb
@@ -22,28 +22,33 @@
       <label class="select control-label" style="width:180px;text-align:left"> Industry </label>
       <div class="controls"><%= text_field_tag("position[industry_name]", @position.industry_name ? @position.industry_name : '' ,:style=>"height:24px;width:300px;") %></div>
     </div>
+  <% if @position.is_current %>
     <div class="control-group required" style="margin-bottom: 10px;">
       <label class="select control-label" style="width:180px;text-align:left"> current job</label>
-      <div class="controls"><%= check_box_tag("position[is_current]", @position.is_current ? @position.is_current : '' ,:style=>"height:24px;width:300px;") %></div>
+      <div class="controls"><%= check_box_tag("position[is_current]", @position.is_current  , true , :id => "is_current",:style=>"height:24px;width:20px;") %></div>
     </div>
+  <% else %>
+    <div class="control-group required" style="margin-bottom: 10px;">
+      <label class="select control-label" style="width:180px;text-align:left"> current job</label>
+      <div class="controls"><%= check_box_tag("position[is_current]", false  , false , :id => "is_current" , :style=>"height:24px;width:20px;") %></div>
+    </div>
+  <% end %>
     <div class="control-group required" style="margin-bottom: 10px;">
       <div class="controls" style="margin-left:0px;">
         <div style="float:left;">
             <label class="select control-label" style="width:45px;text-align:left"> From </label>
             <%= text_field_tag("position[start_date]", @position.start_date ? @position.start_date : '' ,:style=>"float;left;height:24px;width:150px;margin-left:30px;",:class=>"filter_date") %>
           </div>
-          <div style="float:left;">
+          <div style="float:left;display: none" id="END_DATE_DIV">
             <label class="select control-label" style="width:45px;float:left;width:40px;margin-left:40px;margin-right:10px;text-align:left"> To  </label>
-            <%= text_field_tag("position[end_date]", @position.end_date ? @position.end_date : '' ,:style=>"float:left;height:24px;width:150px;") %>
+            <%= text_field_tag("position[end_date]", @position.end_date ? @position.end_date : '' , :id=>"end_date_field" , :style=>"float:left;height:24px;width:150px;" , :class=>"filter_date") %>
           </div>
         </div>
     </div>
-      <script type="text/javascript">
-        $('.filter_date').datepicker({format: "dd,mm,yyyy"});
-    </script>
+     
     <div class="control-group required" style="margin-bottom: 10px;">
       <label class="select control-label" style="width:180px;text-align:left"> Summary </label>
-      <div class="controls"><%= text_area_tag("position[summary]", @position.summary ? @position.summary : '' ,:style=>"height:70px;width:300px;") %></div>
+      <div class="controls"><%= text_area_tag("position[summary]", @position.summary ? @position.summary : '' , :style=>"height:70px;width:300px;") %></div>
     </div>
 
  
@@ -59,6 +64,26 @@
   <div class="cl"></div>
 
 </div>
-<script type="text/javascript">
-    $('.filter_date').datepicker({format: "yyyy-mm-dd"});
-</script>
+ <script type="text/javascript">
+        $('.filter_date').datepicker({format: "dd,mm,yyyy"});
+ 
+$('#is_current').bind('change', function () {
+
+ if($(this).is(':checked')) {
+    $("#END_DATE_DIV").hide();
+ }
+ else
+ {
+   $("#END_DATE_DIV").show();
+  }
+});
+
+if($("#is_current").is(':checked'))
+{
+   $("#END_DATE_DIV").hide();
+}
+if($("#is_current").is(':unchecked'))
+{
+   $("#END_DATE_DIV").show();
+}
+ </script>
